--- a/index.html
+++ b/index.html
@@ -4,26 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Abzy Portfolio</title>
-  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700;800&display=swap" rel="stylesheet">
-
   <style>
     body {
       font-family: 'Poppins', Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #1e1e1e; /* Dark grey */
+      background-color: #1e1e1e;
       color: #e0e0e0;
       overflow-x: hidden;
     }
 
+    /* --- Header --- */
     header {
       background: linear-gradient(135deg, #32ff7e, #1e1e1e);
-      color: white;
       text-align: center;
       padding: 60px 20px;
       border-bottom: 3px solid #32ff7e;
       box-shadow: 0 0 25px rgba(50, 255, 126, 0.5);
+      position: relative;
     }
 
     .logo-container {
@@ -38,7 +37,7 @@
       height: 50px;
       border-radius: 12px;
       background: radial-gradient(circle at 30% 30%, #32ff7e, #1e1e1e);
-      box-shadow: 0 0 20px rgba(50, 255, 126, 0.7);
+      box-shadow: 0 0 30px rgba(50, 255, 126, 0.7), 0 0 60px rgba(50, 255, 126, 0.4);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -46,7 +45,7 @@
       font-weight: 800;
       font-size: 1.4em;
       color: #1e1e1e;
-      animation: rotateGlow 4s linear infinite;
+      animation: rotateGlow 5s linear infinite;
     }
 
     header h1 {
@@ -55,64 +54,72 @@
       font-weight: 800;
       font-size: 3em;
       letter-spacing: 3px;
-      text-transform: uppercase;
       color: #32ff7e;
-      text-shadow: 0 0 15px rgba(50, 255, 126, 0.8),
-                   0 0 25px rgba(50, 255, 126, 0.6);
+      text-shadow: 0 0 15px #32ff7e, 0 0 30px #32ff7e, 0 0 50px #32ff7e;
       animation: glowPulse 2s infinite alternate;
     }
 
     header p {
       margin-top: 10px;
       font-size: 1.1em;
-      opacity: 0.9;
+      opacity: 0.8;
       letter-spacing: 1px;
-      font-weight: 400;
     }
 
+    /* --- Section Titles --- */
     .section-title {
-      width: 100%;
       text-align: center;
       font-size: 1.6em;
       font-weight: 700;
       margin: 40px 0 15px;
       color: #32ff7e;
-      text-transform: uppercase;
       letter-spacing: 2px;
     }
 
+    /* --- Futuristic Grid Background --- */
     .container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
-      padding: 20px;
-      border-top: 1px solid #32ff7e;
-      border-left: 1px solid #32ff7e;
+      padding: 40px 20px;
+      background: repeating-linear-gradient(
+        0deg,
+        #1e1e1e,
+        #1e1e1e 20px,
+        #111 21px
+      ),
+      repeating-linear-gradient(
+        90deg,
+        #1e1e1e,
+        #1e1e1e 20px,
+        #111 21px
+      );
+      position: relative;
     }
 
+    /* --- Project Cards --- */
     .project {
-      background: linear-gradient(135deg, #2b2b2b, #1e1e1e);
+      background: linear-gradient(145deg, #2b2b2b, #1e1e1e);
       padding: 25px;
-      border-radius: 18px;
+      border-radius: 15px;
       text-align: center;
       position: relative;
       transition: transform 0.4s ease, box-shadow 0.4s ease;
-      box-shadow: 0 0 15px rgba(50, 255, 126, 0.2);
-      overflow: hidden;
-      border-top: 1px solid #32ff7e;
-      border-left: 1px solid #32ff7e;
+      box-shadow: 0 0 10px rgba(50, 255, 126, 0.2);
+      border: 1px solid #32ff7e;
     }
 
     .project:hover {
       transform: translateY(-10px) rotateY(5deg);
-      box-shadow: 0 0 35px rgba(50, 255, 126, 0.5);
-      border: 2px solid #32ff7e;
+      box-shadow: 0 0 30px #32ff7e, 0 0 60px #32ff7e inset;
+      border: 1px solid #32ff7e;
     }
 
     .project h3 {
       color: #32ff7e;
       margin-bottom: 12px;
       font-weight: 600;
+      text-shadow: 0 0 5px #32ff7e, 0 0 10px #32ff7e;
     }
 
     .project a {
@@ -130,9 +137,10 @@
       background: #32ff7e;
       color: #1e1e1e;
       transform: scale(1.05);
-      box-shadow: 0 0 15px #32ff7e;
+      box-shadow: 0 0 20px #32ff7e, 0 0 40px #32ff7e inset;
     }
 
+    /* --- Drive Section --- */
     .drive-section {
       background: linear-gradient(135deg, #32ff7e, #1e1e1e);
       color: #1e1e1e;
@@ -142,14 +150,13 @@
       margin: 50px auto 30px;
       width: 90%;
       max-width: 600px;
-      box-shadow: 0 0 30px rgba(50, 255, 126, 0.5);
+      box-shadow: 0 0 30px rgba(50, 255, 126, 0.5), 0 0 60px rgba(50, 255, 126, 0.2) inset;
     }
 
     .drive-section h2 {
       margin-bottom: 10px;
       font-size: 1.5em;
       font-weight: 700;
-      color: #1e1e1e;
     }
 
     .drive-section a {
@@ -167,9 +174,10 @@
       background: #32ff7e;
       color: #1e1e1e;
       transform: scale(1.05);
-      box-shadow: 0 0 15px rgba(50, 255, 126, 0.5);
+      box-shadow: 0 0 20px #32ff7e;
     }
 
+    /* --- Animations --- */
     @keyframes rotateGlow {
       0% { transform: rotate(0deg); }
       50% { transform: rotate(180deg); }
@@ -181,6 +189,7 @@
       100% { text-shadow: 0 0 25px #32ff7e, 0 0 45px #32ff7e; }
     }
 
+    /* --- Mobile --- */
     @media (max-width: 600px) {
       header h1 { font-size: 2.3em; }
       .logo-icon { width: 60px; height: 45px; font-size: 1.2em; }
@@ -199,14 +208,12 @@
     <p>Created by <b>Abzyyy</b></p>
   </header>
 
-  <!-- Drive Section -->
   <div class="drive-section">
     <h2>Designs, Photos & Videos</h2>
     <p>Explore my creative collection below:</p>
     <a href="https://drive.google.com/drive/folders/1JeHOoXHlQUOfeBhwnxhSdlw8_lnjy0kl" target="_blank">Open Google Drive</a>
   </div>
 
-  <!-- Websites -->
   <div class="section-title">Websites</div>
   <div class="container">
     <div class="project">
