--- a/index.html
+++ b/index.html
@@ -1,203 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abzy Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700;800&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Poppins', Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #1e1e1e;
-      color: #e0e0e0;
-      overflow-x: hidden;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Abzy Cyber Portfolio</title>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700;800&display=swap" rel="stylesheet">
+<style>
+  /* --- Global Styles --- */
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', Arial, sans-serif;
+    background-color: #0f0f0f;
+    color: #e0e0e0;
+    overflow-x: hidden;
+    position: relative;
+  }
 
-    /* --- Header --- */
-    header {
-      background: linear-gradient(135deg, #32ff7e, #1e1e1e);
-      text-align: center;
-      padding: 60px 20px;
-      border-bottom: 3px solid #32ff7e;
-      box-shadow: 0 0 25px rgba(50, 255, 126, 0.5);
-      position: relative;
-    }
+  /* --- Neon Grid Background --- */
+  body::before {
+    content: '';
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: linear-gradient(#0f0f0f 1px, transparent 1px), 
+                linear-gradient(90deg, #0f0f0f 1px, transparent 1px);
+    background-size: 50px 50px;
+    z-index: -2;
+    animation: moveGrid 20s linear infinite;
+  }
 
-    .logo-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 12px;
-    }
+  @keyframes moveGrid {
+    0% { background-position: 0 0, 0 0; }
+    100% { background-position: 100px 100px, 100px 100px; }
+  }
 
-    .logo-icon {
-      width: 70px;
-      height: 50px;
-      border-radius: 12px;
-      background: radial-gradient(circle at 30% 30%, #32ff7e, #1e1e1e);
-      box-shadow: 0 0 30px rgba(50, 255, 126, 0.7), 0 0 60px rgba(50, 255, 126, 0.4);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: 'Orbitron', sans-serif;
-      font-weight: 800;
-      font-size: 1.4em;
-      color: #1e1e1e;
-      animation: rotateGlow 5s linear infinite;
-    }
+  /* --- Header --- */
+  header {
+    text-align: center;
+    padding: 60px 20px;
+    border-bottom: 2px solid #32ff7e;
+    position: relative;
+    z-index: 1;
+  }
 
-    header h1 {
-      margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      font-weight: 800;
-      font-size: 3em;
-      letter-spacing: 3px;
-      color: #32ff7e;
-      text-shadow: 0 0 15px #32ff7e, 0 0 30px #32ff7e, 0 0 50px #32ff7e;
-      animation: glowPulse 2s infinite alternate;
-    }
+  .logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+  }
 
-    header p {
-      margin-top: 10px;
-      font-size: 1.1em;
-      opacity: 0.8;
-      letter-spacing: 1px;
-    }
+  .logo-icon {
+    width: 70px;
+    height: 50px;
+    border-radius: 12px;
+    background: radial-gradient(circle at 30% 30%, #32ff7e, #0f0f0f);
+    box-shadow: 0 0 25px #32ff7e, 0 0 50px #32ff7e inset;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 800;
+    font-size: 1.4em;
+    color: #0f0f0f;
+    animation: neonGlow 3s ease-in-out infinite alternate;
+  }
 
-    /* --- Section Titles --- */
-    .section-title {
-      text-align: center;
-      font-size: 1.6em;
-      font-weight: 700;
-      margin: 40px 0 15px;
-      color: #32ff7e;
-      letter-spacing: 2px;
-    }
+  header h1 {
+    margin: 0;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 3em;
+    color: #32ff7e;
+    text-shadow: 0 0 5px #32ff7e, 0 0 15px #32ff7e, 0 0 30px #32ff7e;
+    animation: flicker 2s infinite alternate;
+  }
 
-    /* --- Futuristic Grid Background --- */
-    .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 40px 20px;
-      background: repeating-linear-gradient(
-        0deg,
-        #1e1e1e,
-        #1e1e1e 20px,
-        #111 21px
-      ),
-      repeating-linear-gradient(
-        90deg,
-        #1e1e1e,
-        #1e1e1e 20px,
-        #111 21px
-      );
-      position: relative;
-    }
+  header p {
+    margin-top: 10px;
+    font-size: 1.1em;
+    opacity: 0.8;
+  }
 
-    /* --- Project Cards --- */
-    .project {
-      background: linear-gradient(145deg, #2b2b2b, #1e1e1e);
-      padding: 25px;
-      border-radius: 15px;
-      text-align: center;
-      position: relative;
-      transition: transform 0.4s ease, box-shadow 0.4s ease;
-      box-shadow: 0 0 10px rgba(50, 255, 126, 0.2);
-      border: 1px solid #32ff7e;
-    }
+  /* --- Section Titles --- */
+  .section-title {
+    text-align: center;
+    font-size: 1.6em;
+    font-weight: 700;
+    margin: 40px 0 15px;
+    color: #32ff7e;
+    text-shadow: 0 0 5px #32ff7e, 0 0 15px #32ff7e;
+  }
 
-    .project:hover {
-      transform: translateY(-10px) rotateY(5deg);
-      box-shadow: 0 0 30px #32ff7e, 0 0 60px #32ff7e inset;
-      border: 1px solid #32ff7e;
-    }
+  /* --- Container --- */
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    position: relative;
+    z-index: 1;
+  }
 
-    .project h3 {
-      color: #32ff7e;
-      margin-bottom: 12px;
-      font-weight: 600;
-      text-shadow: 0 0 5px #32ff7e, 0 0 10px #32ff7e;
-    }
+  /* --- Project Cards --- */
+  .project {
+    background: #111;
+    border-radius: 15px;
+    padding: 25px;
+    text-align: center;
+    border: 1px solid #32ff7e;
+    box-shadow: 0 0 10px #32ff7e, 0 0 30px #32ff7e inset;
+    transition: transform 0.4s ease, box-shadow 0.4s ease;
+    position: relative;
+  }
 
-    .project a {
-      color: #32ff7e;
-      text-decoration: none;
-      font-weight: bold;
-      border: 1px solid #32ff7e;
-      padding: 10px 18px;
-      border-radius: 10px;
-      display: inline-block;
-      transition: all 0.3s ease;
-    }
+  .project:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 0 30px #32ff7e, 0 0 60px #32ff7e inset;
+  }
 
-    .project a:hover {
-      background: #32ff7e;
-      color: #1e1e1e;
-      transform: scale(1.05);
-      box-shadow: 0 0 20px #32ff7e, 0 0 40px #32ff7e inset;
-    }
+  .project h3 {
+    color: #32ff7e;
+    margin-bottom: 12px;
+    text-shadow: 0 0 5px #32ff7e, 0 0 15px #32ff7e;
+  }
 
-    /* --- Drive Section --- */
-    .drive-section {
-      background: linear-gradient(135deg, #32ff7e, #1e1e1e);
-      color: #1e1e1e;
-      padding: 40px;
-      border-radius: 18px;
-      text-align: center;
-      margin: 50px auto 30px;
-      width: 90%;
-      max-width: 600px;
-      box-shadow: 0 0 30px rgba(50, 255, 126, 0.5), 0 0 60px rgba(50, 255, 126, 0.2) inset;
-    }
+  .project a {
+    color: #32ff7e;
+    text-decoration: none;
+    font-weight: bold;
+    border: 1px solid #32ff7e;
+    padding: 10px 18px;
+    border-radius: 10px;
+    display: inline-block;
+    transition: all 0.3s ease;
+  }
 
-    .drive-section h2 {
-      margin-bottom: 10px;
-      font-size: 1.5em;
-      font-weight: 700;
-    }
+  .project a:hover {
+    background: #32ff7e;
+    color: #0f0f0f;
+    transform: scale(1.05);
+    box-shadow: 0 0 20px #32ff7e, 0 0 40px #32ff7e inset;
+  }
 
-    .drive-section a {
-      color: #1e1e1e;
-      background: rgba(50, 255, 126, 0.2);
-      padding: 12px 25px;
-      border-radius: 10px;
-      display: inline-block;
-      margin-top: 10px;
-      font-weight: bold;
-      transition: all 0.3s ease;
-    }
+  /* --- Drive Section --- */
+  .drive-section {
+    background: #111;
+    color: #32ff7e;
+    padding: 40px;
+    border-radius: 18px;
+    text-align: center;
+    margin: 50px auto 30px;
+    width: 90%;
+    max-width: 600px;
+    box-shadow: 0 0 30px #32ff7e, 0 0 60px #32ff7e inset;
+  }
 
-    .drive-section a:hover {
-      background: #32ff7e;
-      color: #1e1e1e;
-      transform: scale(1.05);
-      box-shadow: 0 0 20px #32ff7e;
-    }
+  .drive-section a {
+    color: #0f0f0f;
+    background: #32ff7e;
+    padding: 12px 25px;
+    border-radius: 10px;
+    display: inline-block;
+    font-weight: bold;
+    transition: all 0.3s ease;
+  }
 
-    /* --- Animations --- */
-    @keyframes rotateGlow {
-      0% { transform: rotate(0deg); }
-      50% { transform: rotate(180deg); }
-      100% { transform: rotate(360deg); }
-    }
+  .drive-section a:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px #32ff7e;
+  }
 
-    @keyframes glowPulse {
-      0% { text-shadow: 0 0 15px #32ff7e, 0 0 30px #32ff7e; }
-      100% { text-shadow: 0 0 25px #32ff7e, 0 0 45px #32ff7e; }
-    }
+  /* --- Animations --- */
+  @keyframes neonGlow {
+    0% { box-shadow: 0 0 25px #32ff7e, 0 0 50px #32ff7e inset; }
+    50% { box-shadow: 0 0 40px #32ff7e, 0 0 70px #32ff7e inset; }
+    100% { box-shadow: 0 0 25px #32ff7e, 0 0 50px #32ff7e inset; }
+  }
 
-    /* --- Mobile --- */
-    @media (max-width: 600px) {
-      header h1 { font-size: 2.3em; }
-      .logo-icon { width: 60px; height: 45px; font-size: 1.2em; }
-      .project { width: 100%; }
-      .container { grid-template-columns: 1fr; padding: 10px; }
-      .drive-section { width: 95%; padding: 30px; }
+  @keyframes flicker {
+    0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+      opacity: 1;
     }
-  </style>
+    20%, 24%, 55% {
+      opacity: 0.4;
+    }
+  }
+
+  @media (max-width: 600px) {
+    header h1 { font-size: 2.3em; }
+    .logo-icon { width: 60px; height: 45px; font-size: 1.2em; }
+    .container { grid-template-columns: 1fr; padding: 10px; }
+    .drive-section { width: 95%; padding: 30px; }
+  }
+</style>
 </head>
 <body>
   <header>
@@ -210,7 +206,7 @@
 
   <div class="drive-section">
     <h2>Designs, Photos & Videos</h2>
-    <p>Explore my creative collection below:</p>
+    <p>Explore my creative collection:</p>
     <a href="https://drive.google.com/drive/folders/1JeHOoXHlQUOfeBhwnxhSdlw8_lnjy0kl" target="_blank">Open Google Drive</a>
   </div>
 
