--- a/index.html
+++ b/index.html
@@ -183,22 +183,39 @@ header p {
   text-shadow: 0 0 5px #32ff7e, 0 0 15px #32ff7e;
 }
 
-.project a {
-  color: #32ff7e;
-  text-decoration: none;
-  font-weight: bold;
-  border: 1px solid #32ff7e;
-  padding: 10px 18px;
-  border-radius: 10px;
-  display: inline-block;
-  transition: all 0.3s ease;
+/* --- Glitch Titles --- */
+.glitch {
+  position: relative;
 }
-
-.project a:hover {
-  background: #32ff7e;
-  color: #0f0f0f;
-  transform: scale(1.05);
-  box-shadow: 0 0 20px #32ff7e, 0 0 40px #32ff7e inset;
+.glitch::before,
+.glitch::after {
+  content: attr(data-text);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+}
+.glitch:hover::before {
+  animation: glitchTop 0.3s linear infinite;
+}
+.glitch:hover::after {
+  animation: glitchBottom 0.3s linear infinite;
+}
+@keyframes glitchTop {
+  0% { clip: rect(0, 9999px, 4px, 0); transform: translate(-2px, -2px); opacity: 0.8; }
+  25% { clip: rect(5px, 9999px, 12px, 0); transform: translate(2px, 2px); opacity: 0.6; }
+  50% { clip: rect(12px, 9999px, 16px, 0); transform: translate(-1px, 1px); opacity: 0.7; }
+  75% { clip: rect(8px, 9999px, 14px, 0); transform: translate(1px, -1px); opacity: 0.6; }
+  100% { clip: rect(0, 9999px, 4px, 0); transform: translate(0, 0); opacity: 0.8; }
+}
+@keyframes glitchBottom {
+  0% { clip: rect(20px, 9999px, 30px, 0); transform: translate(2px, 2px); opacity: 0.7; }
+  25% { clip: rect(18px, 9999px, 25px, 0); transform: translate(-2px, -2px); opacity: 0.6; }
+  50% { clip: rect(22px, 9999px, 28px, 0); transform: translate(1px, -1px); opacity: 0.8; }
+  75% { clip: rect(24px, 9999px, 30px, 0); transform: translate(-1px, 1px); opacity: 0.6; }
+  100% { clip: rect(20px, 9999px, 30px, 0); transform: translate(2px, 2px); opacity: 0.7; }
 }
 
 /* --- Drive Section --- */
@@ -252,6 +269,18 @@ header p {
   100% { background-position: 0 100%, 0 0; }
 }
 
+@keyframes pageGlitch {
+  0%, 100% { filter: none; }
+  20% { filter: hue-rotate(5deg) blur(1px); }
+  40% { filter: hue-rotate(-5deg) blur(0.5px); }
+  60% { filter: hue-rotate(3deg) blur(1px); }
+  80% { filter: hue-rotate(-3deg) blur(0.5px); }
+}
+
+body.glitchActive {
+  animation: pageGlitch 0.3s infinite;
+}
+
 @media (max-width: 600px) {
   header h1 { font-size: 2.3em; }
   .logo-icon { width: 60px; height: 45px; font-size: 1.2em; }
@@ -264,10 +293,10 @@ header p {
 
 <header>
   <div class="logo-container">
-    <div class="logo-icon">Abzy</div>
-    <h1>MY PORTFOLIO</h1>
+  
+    <h1>DigitalVerse</h1>
   </div>
-  <p>Created by <b>Abzyyy</b></p>
+  <p><b>Portfolio by Abdullah</b></p>
 </header>
 
 <div class="drive-section">
@@ -302,11 +331,27 @@ for(let i=0;i<particleCount;i++){
   p.style.left = Math.random() * 100 + '%';
   p.style.background = '#32ff7e';
   p.style.opacity = Math.random() * 0.5 + 0.2;
-  p.style.setProperty('--drift', (Math.random() * 40 - 20) + 'px'); // random horizontal drift
+  p.style.setProperty('--drift', (Math.random() * 40 - 20) + 'px');
   p.style.animationDuration = (Math.random() * 10 + 5) + 's';
   p.style.animationDelay = Math.random() * 5 + 's';
   document.body.appendChild(p);
 }
+
+// --- Page Glitch Flicker on Hover ---
+let glitchTimeout;
+document.body.addEventListener('mousemove', () => {
+  document.body.classList.add('glitchActive');
+  clearTimeout(glitchTimeout);
+  glitchTimeout = setTimeout(() => {
+    document.body.classList.remove('glitchActive');
+  }, 150);
+});
+
+// --- Add glitch class to all project cards ---
+document.querySelectorAll('.project h3').forEach(h => {
+  h.classList.add('glitch');
+  h.setAttribute('data-text', h.textContent);
+});
 </script>
 
 </body>
