--- a/index.html
+++ b/index.html
@@ -1,134 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Abzy Cyber Portfolio</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-<style>
-/* --- Global Styles --- */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Poppins', Arial, sans-serif;
-  background: linear-gradient(135deg, #f6d1d1, #f1e1f1);
-  color: #333;
-  overflow-x: hidden;
-  position: relative;
-  transition: all 0.3s ease;
-}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Abzy Cyber Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <style>
+    /* --- Global Styles --- */
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', Arial, sans-serif;
+      color: #333;
+      overflow-x: hidden;
+      position: relative;
+      transition: all 0.3s ease;
+    }
 
-/* --- Header --- */
-header {
-  text-align: center;
-  padding: 100px 20px 40px;
-  position: relative;
-  z-index: 1;
-}
+    /* Fullscreen Video Background */
+    .video-background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1;
+    }
 
-header h1 {
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-  font-size: 3.5em;
-  color: #ff9f9f;
-  text-shadow: 0 0 5px #ff9f9f, 0 0 15px #ff9f9f;
-}
+    /* --- Header --- */
+    header {
+      text-align: center;
+      padding: 100px 20px 40px;
+      position: relative;
+      z-index: 1;
+    }
 
-header p {
-  margin-top: 10px;
-  font-size: 1.2em;
-  color: #666;
-}
+    header h1 {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      font-size: 3.5em;
+      color: #ff9f9f;
+      text-shadow: 0 0 5px #ff9f9f, 0 0 15px #ff9f9f;
+    }
 
-/* --- Section Titles --- */
-.section-title {
-  text-align: center;
-  font-size: 1.8em;
-  font-weight: 600;
-  margin: 40px 0 15px;
-  color: #ff9f9f;
-}
+    header p {
+      margin-top: 10px;
+      font-size: 1.2em;
+      color: #666;
+    }
 
-/* --- Container --- */
-.container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-  padding: 20px;
-  position: relative;
-  z-index: 1;
-}
+    /* --- Section Titles --- */
+    .section-title {
+      text-align: center;
+      font-size: 1.8em;
+      font-weight: 600;
+      margin: 40px 0 15px;
+      color: #ff9f9f;
+    }
 
-/* --- Project Cards --- */
-.project {
-  background: #ffffff;
-  border-radius: 15px;
-  padding: 25px;
-  text-align: center;
-  border: 1px solid #ff9f9f;
-  box-shadow: 0 0 15px rgba(255, 159, 159, 0.3);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  position: relative;
-  cursor: pointer;
-}
+    /* --- Container --- */
+    .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 20px;
+      position: relative;
+      z-index: 1;
+    }
 
-.project:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 0 20px rgba(255, 159, 159, 0.6);
-}
+    /* --- Project Cards --- */
+    .project {
+      background: #ffffff;
+      border-radius: 15px;
+      padding: 25px;
+      text-align: center;
+      border: 1px solid #ff9f9f;
+      box-shadow: 0 0 15px rgba(255, 159, 159, 0.3);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      position: relative;
+      cursor: pointer;
+    }
 
-.project h3 {
-  color: #ff9f9f;
-  margin-bottom: 12px;
-  font-weight: 600;
-}
+    .project:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 0 20px rgba(255, 159, 159, 0.6);
+    }
 
-/* --- Drive Section --- */
-.drive-section {
-  background: #ffffff;
-  color: #ff9f9f;
-  padding: 40px;
-  border-radius: 18px;
-  text-align: center;
-  margin: 50px auto 30px;
-  width: 90%;
-  max-width: 600px;
-  box-shadow: 0 0 30px rgba(255, 159, 159, 0.2);
-}
+    .project h3 {
+      color: #ff9f9f;
+      margin-bottom: 12px;
+      font-weight: 600;
+    }
 
-.drive-section a {
-  color: #ffffff;
-  background: #ff9f9f;
-  padding: 12px 25px;
-  border-radius: 10px;
-  display: inline-block;
-  font-weight: bold;
-  transition: all 0.3s ease;
-}
+    /* --- Drive Section --- */
+    .drive-section {
+      background: #ffffff;
+      color: #ff9f9f;
+      padding: 40px;
+      border-radius: 18px;
+      text-align: center;
+      margin: 50px auto 30px;
+      width: 90%;
+      max-width: 600px;
+      box-shadow: 0 0 30px rgba(255, 159, 159, 0.2);
+    }
 
-.drive-section a:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
-}
+    .drive-section a {
+      color: #ffffff;
+      background: #ff9f9f;
+      padding: 12px 25px;
+      border-radius: 10px;
+      display: inline-block;
+      font-weight: bold;
+      transition: all 0.3s ease;
+    }
 
-/* --- Animations --- */
-@keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
-}
+    .drive-section a:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
+    }
 
-/* --- Glitch Effect Removed --- */
+    /* --- Mobile Responsiveness --- */
+    @media (max-width: 600px) {
+      header h1 { font-size: 2.3em; }
+      .container { grid-template-columns: 1fr; padding: 10px; }
+      .drive-section { width: 95%; padding: 30px; }
+    }
 
-/* --- Mobile Responsiveness --- */
-@media (max-width: 600px) {
-  header h1 { font-size: 2.3em; }
-  .container { grid-template-columns: 1fr; padding: 10px; }
-  .drive-section { width: 95%; padding: 30px; }
-}
-
-</style>
+  </style>
 </head>
 <body>
+
+<!-- Full-screen Video Background -->
+<video autoplay muted loop class="video-background">
+  <source src="https://motionbgs.com/media/8674/bmw-m4-at-sunrise.960x540.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
 <header>
   <div class="logo-container">
