--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Abzy Cyber Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
-    /* --- Global Styles --- */
     body {
       margin: 0;
       padding: 0;
@@ -17,7 +16,6 @@
       transition: all 0.3s ease;
     }
 
-    /* Fullscreen Video Background */
     .video-background {
       position: fixed;
       top: 0;
@@ -28,7 +26,6 @@
       z-index: -1;
     }
 
-    /* --- Header --- */
     header {
       text-align: center;
       padding: 100px 20px 40px;
@@ -38,7 +35,6 @@
 
     header h1 {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
       font-size: 3.5em;
       color: #ff9f9f;
       text-shadow: 0 0 5px #ff9f9f, 0 0 15px #ff9f9f;
@@ -50,63 +46,11 @@
       color: #666;
     }
 
-    /* --- Section Titles --- */
-    .section-title {
-      text-align: center;
-      font-size: 1.8em;
-      font-weight: 600;
-      margin: 40px 0 15px;
-      color: #ff9f9f;
+    .button-container {
+      margin-top: 30px;
     }
 
-    /* --- Container --- */
-    .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-      position: relative;
-      z-index: 1;
-    }
-
-    /* --- Project Cards --- */
-    .project {
-      background: #ffffff;
-      border-radius: 15px;
-      padding: 25px;
-      text-align: center;
-      border: 1px solid #ff9f9f;
-      box-shadow: 0 0 15px rgba(255, 159, 159, 0.3);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      position: relative;
-      cursor: pointer;
-    }
-
-    .project:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 0 20px rgba(255, 159, 159, 0.6);
-    }
-
-    .project h3 {
-      color: #ff9f9f;
-      margin-bottom: 12px;
-      font-weight: 600;
-    }
-
-    /* --- Drive Section --- */
-    .drive-section {
-      background: #ffffff;
-      color: #ff9f9f;
-      padding: 40px;
-      border-radius: 18px;
-      text-align: center;
-      margin: 50px auto 30px;
-      width: 90%;
-      max-width: 600px;
-      box-shadow: 0 0 30px rgba(255, 159, 159, 0.2);
-    }
-
-    .drive-section a {
+    .button-container a {
       color: #ffffff;
       background: #ff9f9f;
       padding: 12px 25px;
@@ -114,55 +58,33 @@
       display: inline-block;
       font-weight: bold;
       transition: all 0.3s ease;
+      text-decoration: none;
     }
 
-    .drive-section a:hover {
+    .button-container a:hover {
       transform: scale(1.05);
       box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
     }
 
-    /* --- Mobile Responsiveness --- */
     @media (max-width: 600px) {
       header h1 { font-size: 2.3em; }
-      .container { grid-template-columns: 1fr; padding: 10px; }
-      .drive-section { width: 95%; padding: 30px; }
     }
-
   </style>
 </head>
 <body>
 
-<!-- Full-screen Video Background -->
 <video autoplay muted loop class="video-background">
   <source src="https://motionbgs.com/media/5976/cyberpunk-palm-trees.960x540.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
 <header>
-  <div class="logo-container">
-    <h1>DigitalVerse</h1>
-  </div>
+  <h1>DigitalVerse</h1>
   <p><b>Portfolio by Abdullah</b></p>
+  <div class="button-container">
+    <a href="projects.html">See My Projects</a>
+  </div>
 </header>
-
-<div class="drive-section">
-  <h2>Designs, Photos & Videos</h2>
-  <p>Explore my creative collection:</p>
-  <a href="https://drive.google.com/drive/folders/1JeHOoXHlQUOfeBhwnxhSdlw8_lnjy0kl" target="_blank">Open Google Drive</a>
-</div>
-
-<div class="section-title">Websites</div>
-<div class="container">
-  <div class="project"><h3>Website 1</h3><a href="https://flexinnovative.net/" target="_blank">Visit site</a></div>
-  <div class="project"><h3>Website 2</h3><a href="https://azurifyenterprise.com/" target="_blank">Visit site</a></div>
-  <div class="project"><h3>Website 3</h3><a href="https://sjesolution.com/" target="_blank">Visit site</a></div>
-  <div class="project"><h3>Website 4</h3><a href="https://spectratrading.org/" target="_blank">Visit site</a></div>
-  <div class="project"><h3>Website 5</h3><a href="https://isprojets.com/" target="_blank">Visit site</a></div>
-  <div class="project"><h3>Website 6</h3><a href="https://innoteksolutions.org/" target="_blank">Visit site</a></div>
-  <div class="project"><h3>Website 7</h3><a href="https://sacollectables.co.za/" target="_blank">Visit site</a></div>
-  <div class="project"><h3>Website 8</h3><a href="https://vumaexpots.com/" target="_blank">Visit site</a></div>
-  <div class="project"><h3>Website 9</h3><a href="https://nexifyenterprise.com/" target="_blank">Visit site</a></div>
-</div>
 
 </body>
 </html>
